--- a/app/src/main/res/layout/payment_page.xml
+++ b/app/src/main/res/layout/payment_page.xml
@@ -23,14 +23,14 @@
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:text="@string/generate_code"
-        android:background="@color/yellowLogo"
+        android:background="@color/colorPrimary"
         android:textAllCaps="false"
         android:textSize="20sp"/>
 
     <ImageView
         android:id="@+id/qr_code"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_gravity="center"/>
 
